Fix low contrast issue in tags and buttons

--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ h4 {
 }
 
 .skill-li {
-  color: #36b37e;
+  color: #247855;
   font-size: 12px;
   font-weight: bold;
   height: 20px;
@@ -240,7 +240,7 @@ h4 {
 
 button {
   justify-self: center;
-  background: #36b37f;
+  background: #247855;
   padding: 12px;
   font-weight: 500;
   border-radius: 4px;
